tests/integration/snapshots/integration__parse_failure__array_open_with_value.snap
---
source: tests/integration/parse_failure.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
[1, [
stderr ---
error: expected entry or closed delimiter `]`, found no significant characters
 --> stdin:1:5
  |
1 | [1, [
  |     ^
  |     |
  |     expected due to `[`
  |
help: insert the missing closed delimiter `]`
  |
1 | [1, []
  |      +
